# QuickConvert

./: README.md  pyproject.toml  quickconvert.desktop
quickconvert/: __main__.py  units.py
tests/: test_quickconvert.py
tools/: install.sh  xdg-comments.py
